fix mobile missing gap

--- a/src/assets/styles/pages/JuniorPages/_tipCalculator.scss
+++ b/src/assets/styles/pages/JuniorPages/_tipCalculator.scss
@@ -28,7 +28,7 @@
     align-items: center;
 
     .tip-calculator-page-heading {
-        margin-bottom: 4rem;
+        margin: 4rem auto;
     }
 
     #tipCalculator {
